@@ -1,3 +1,5 @@
+* new "orthanc-explorer-2" StandardConfigurations
+
 2022-11-16 - v 0.4.1
 ====================
 
